--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,34 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>varmetrics</name>
+
     <properties>
         <java.version>11</java.version>
+
+        <spring-boot-starter>2.1.4.RELEASE</spring-boot-starter>
     </properties>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.4.RELEASE</version>
+    </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot-starter}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot-starter}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
