--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <h2.url>jdbc:h2:mem:DbVarMetrics;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS UFS_REQUEST\;SET SCHEMA UFS_REQUEST\;RUNSCRIPT FROM 'classpath:schema.sql';</h2.url>
+        <h2.url>jdbc:h2:mem:DbVarMetrics;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS VAR_METRICS\;SET SCHEMA VAR_METRICS\;RUNSCRIPT FROM 'classpath:schema.sql';</h2.url>
 
 
 
