--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2
   datasource:
     url: @h2.url@
     driverClassName: org.h2.Driver
@@ -6,4 +10,6 @@ spring:
     password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-    generate-ddl: true
+    database: h2
+    hibernate:
+      ddl-auto: none
