--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,10 @@
         <h2.url>jdbc:h2:mem:DbVarMetrics;DB_CLOSE_DELAY=-1\;RUNSCRIPT FROM 'classpath:sql/h2-ddl.sql';</h2.url>
 
         <spring-boot-starter.version>2.1.4.RELEASE</spring-boot-starter.version>
-        <h2.version>1.4.200</h2.version>
         <lombok.version>1.18.10</lombok.version>
+        <jsoup.version>1.11.3</jsoup.version>
+        <h2.version>1.4.200</h2.version>
+        <junit.version>4.13</junit.version>
     </properties>
 
     <parent>
@@ -36,13 +38,6 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring-boot-starter.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>${h2.version}</version>
-            <scope>runtime</scope>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -51,8 +46,21 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.11.3</version>
+            <version>${jsoup.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
