--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <lombok.version>1.18.10</lombok.version>
         <jsoup.version>1.11.3</jsoup.version>
         <h2.version>1.4.200</h2.version>
+        <postgresql.version>42.2.16</postgresql.version>
         <junit.version>4.13</junit.version>
     </properties>
 
@@ -53,6 +54,11 @@
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
