--- a/src/main/resources/application-DEV.yml
+++ b/src/main/resources/application-DEV.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8080
 
 spring:
   h2:
@@ -15,9 +15,5 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: none
-    generate-ddl: true
-    properties:
-      hibernate:
-        jdbc:
-          lob:
-            non_contextual_creation: true
+  liquibase:
+    enabled: false
