--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>${spring-boot-starter.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-starter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
@@ -70,7 +76,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-<!--            <version>${liquibase-core.version}</version>-->
+            <!--            <version>${liquibase-core.version}</version>-->
         </dependency>
 
     </dependencies>
