--- a/src/main/resources/application-PROM.yml
+++ b/src/main/resources/application-PROM.yml
@@ -10,3 +10,7 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:/migration/0001_changelog.xml
+  jpa:
+    properties:
+      hibernate:
+        default_schema: VAR_METRICS
