--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
                 <configuration>
                     <mainClass>com.varmetrics.Application</mainClass>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
