--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
     </dependencies>
 
     <build>
+        <finalName>varmetrics</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
