--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <properties>
         <java.version>11</java.version>
+        <start-class>com.varmetrics.Application</start-class>
         <h2.url>jdbc:h2:mem:DbVarMetrics;DB_CLOSE_DELAY=-1\;RUNSCRIPT FROM 'classpath:h2/h2-ddl.sql';</h2.url>
 
         <spring-boot-starter.version>2.1.4.RELEASE</spring-boot-starter.version>
@@ -96,8 +97,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot-starter.version}</version>
                 <configuration>
-                    <finalName>varmetrics</finalName>
-                    <mainClass>com.varmetrics.Application</mainClass>
+                    <mainClass>${start-class}</mainClass>
                 </configuration>
             </plugin>
             <plugin>
