VAR-17 Настройки докера

--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,12 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>${maven-assembly-plugin.version}</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <finalName>varmetrics</finalName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
