VAR-24 Поправил сборку с IT тестами

--- a/pom.xml
+++ b/pom.xml
@@ -111,74 +111,74 @@
         </plugins>
     </build>
 
-<!--    <profiles>-->
-<!--        &lt;!&ndash; Запуск окружения для прогона интеграционных тестов &ndash;&gt;-->
-<!--        <profile>-->
-<!--            <id>run.it</id>-->
-<!--            <activation>-->
-<!--                <activeByDefault>true</activeByDefault>-->
-<!--            </activation>-->
-<!--            <build>-->
-<!--                <plugins>-->
-<!--                    <plugin>-->
-<!--                        <groupId>org.springframework.boot</groupId>-->
-<!--                        <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--                        <configuration>-->
-<!--                            &lt;!&ndash; Если отключены тесты, то мы не поднимаем контекст, чтобы проходил билд на heroku &ndash;&gt;-->
-<!--                            <skip>${skipTests}</skip>-->
-<!--                        </configuration>-->
-<!--                        <executions>-->
-<!--                            <execution>-->
-<!--                                <id>pre-integration-test</id>-->
-<!--                                <phase>pre-integration-test</phase>-->
-<!--                                <goals>-->
-<!--                                    <goal>start</goal>-->
-<!--                                </goals>-->
-<!--                                <configuration>-->
-<!--                                    <profiles>-->
-<!--                                        <profile>DEV</profile>-->
-<!--                                    </profiles>-->
-<!--                                    <fork>true</fork>-->
-<!--                                    <systemPropertyVariables>-->
-<!--                                        <healthcheck.offline>true</healthcheck.offline>-->
-<!--                                        <ru.sbrf.ufs.platform.envmode.dev>true</ru.sbrf.ufs.platform.envmode.dev>-->
-<!--                                    </systemPropertyVariables>-->
-<!--                                    <environmentVariables>-->
-<!--                                        <STAND_TYPE>DEV</STAND_TYPE>-->
-<!--                                    </environmentVariables>-->
-<!--                                    <jvmArguments>&#45;&#45;illegal-access=warn</jvmArguments>-->
-<!--                                </configuration>-->
-<!--                            </execution>-->
-<!--                            <execution>-->
-<!--                                <id>post-integration-test</id>-->
-<!--                                <phase>post-integration-test</phase>-->
-<!--                                <goals>-->
-<!--                                    <goal>stop</goal>-->
-<!--                                </goals>-->
-<!--                            </execution>-->
-<!--                        </executions>-->
-<!--                    </plugin>-->
-<!--                    <plugin>-->
-<!--                        <groupId>org.apache.maven.plugins</groupId>-->
-<!--                        <artifactId>maven-failsafe-plugin</artifactId>-->
-<!--                        <executions>-->
-<!--                            <execution>-->
-<!--                                <goals>-->
-<!--                                    <goal>integration-test</goal>-->
-<!--                                    <goal>verify</goal>-->
-<!--                                </goals>-->
-<!--                            </execution>-->
-<!--                        </executions>-->
-<!--                        <configuration>-->
-<!--                            <enableAssertions>true</enableAssertions>-->
-<!--                            <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>-->
-<!--                            <trimStackTrace>false</trimStackTrace>-->
-<!--                            &lt;!&ndash; Fix https://stackoverflow.com/a/52532095 &ndash;&gt;-->
-<!--                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>-->
-<!--                        </configuration>-->
-<!--                    </plugin>-->
-<!--                </plugins>-->
-<!--            </build>-->
-<!--        </profile>-->
-<!--    </profiles>-->
+    <profiles>
+        <!-- Запуск окружения для прогона интеграционных тестов -->
+        <profile>
+            <id>run.it</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <!-- Если отключены тесты, то мы не поднимаем контекст, чтобы проходил билд на heroku -->
+                            <skip>${skipITs}</skip>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>pre-integration-test</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>start</goal>
+                                </goals>
+                                <configuration>
+                                    <profiles>
+                                        <profile>DEV</profile>
+                                    </profiles>
+                                    <fork>true</fork>
+                                    <systemPropertyVariables>
+                                        <healthcheck.offline>true</healthcheck.offline>
+                                        <ru.sbrf.ufs.platform.envmode.dev>true</ru.sbrf.ufs.platform.envmode.dev>
+                                    </systemPropertyVariables>
+                                    <environmentVariables>
+                                        <STAND_TYPE>DEV</STAND_TYPE>
+                                    </environmentVariables>
+                                    <jvmArguments>--illegal-access=warn</jvmArguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>post-integration-test</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>stop</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <enableAssertions>true</enableAssertions>
+                            <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
+                            <trimStackTrace>false</trimStackTrace>
+                            <!-- Fix https://stackoverflow.com/a/52532095 -->
+                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
