--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <h2.version>1.4.200</h2.version>
         <postgresql.version>42.2.9</postgresql.version>
         <junit.version>4.13</junit.version>
-        <liquibase-core.version>3.5.1</liquibase-core.version>
+        <liquibase-core.version>3.6.3</liquibase-core.version>
         <rest-assured.version>3.3.0</rest-assured.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
@@ -44,11 +44,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot-starter.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
-<!--            <version>${spring-boot-starter.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${spring-boot-starter.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <!--            <version>${liquibase-core.version}</version>-->
+            <version>${liquibase-core.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
