VAR-26 Добавил в сборку фронт

--- a/pom.xml
+++ b/pom.xml
@@ -114,27 +114,20 @@
                 <version>${spring-boot-starter.version}</version>
             </plugin>
 
-<!--            <plugin>-->
-<!--                <groupId>com.github.mjeanroy</groupId>-->
-<!--                <artifactId>node-maven-plugin</artifactId>-->
-<!--                <version>0.2.0</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>run-npm</id>-->
-<!--                        <goals>-->
-<!--                            <goal>check</goal>-->
-<!--                            <goal>pre-clean</goal>-->
-<!--                            <goal>install</goal>-->
-<!--                            <goal>bower</goal>-->
-<!--                            <goal>clean</goal>-->
-<!--                            <goal>lint</goal>-->
-<!--                            <goal>test</goal>-->
-<!--                            <goal>build</goal>-->
-<!--                            <goal>publish</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>com.github.mjeanroy</groupId>
+                <artifactId>node-maven-plugin</artifactId>
+                <version>0.2.0</version>
+                <executions>
+                    <execution>
+                        <id>run-npm</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
