VAR-26 node-maven-plugin -> frontend-maven-plugin

--- a/.gitignore
+++ b/.gitignore
@@ -128,4 +128,6 @@ Temporary Items
 
 # Folder config file
 package-lock.json
-src/main/resources/static/js
+src/main/resources/static/
+node
+node_modules
