--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <h2.version>1.4.200</h2.version>
         <rest-assured.version>4.2.0</rest-assured.version>
         <junit.version>4.13.1</junit.version>
+        <testng.version>7.2.0</testng.version>
 
         <!-- Plugin configuration -->
         <frontend-maven-plugin.version>1.10.3</frontend-maven-plugin.version>
@@ -102,6 +103,12 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
