--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "varmetrics",
   "version": "1.1.0",
   "description": "[Сайт VarMetrics](https://varmetrics.herokuapp.com/)",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
@@ -27,6 +27,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.4.9",
     "vuetify": "^2.3.18",
+    "vuetify-loader": "^1.6.0",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
