--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,10 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
+
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG
+      hibernate: ERROR
