--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <frontend-maven-plugin.version>1.10.3</frontend-maven-plugin.version>
         <frontend-maven-plugin.node.version>v13.7.0</frontend-maven-plugin.node.version>
         <frontend-maven-plugin.npm.version>6.14.8</frontend-maven-plugin.npm.version>
+        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
     </properties>
 
     <parent>
@@ -128,7 +129,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>${maven-dependency-plugin.version}</version>
             </plugin>
 
             <plugin>
